# aiassistant

./: .gitignore  README.md  pyproject.toml  requirements.txt  workspace.bat
frontend/: ai_message.html  chat.html  chat_message.html  chat_template.html  human_message.html  login.html
frontend/css/: chat.css
frontend/js/: chat.js
src/: chatbot.py  database.py  main.py  settings.py
