[tool.poetry]
name = "aiassistant"
version = "0.1.0"
description = "This is an ai assistant trained with nuanced data"
authors = ["Mfon Nwa <mfonnwa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "1.0.0"
langchain = "0.1.10"
pypdf = "^4.1.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlmodel = "0.0.16"
faiss-cpu = "^1.8.0"
jinja2 = "^3.1.3"
gunicorn = "^21.2.0"
cohere = "4.57"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
